# py-ipmi-cert

./: .bumpversion.toml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  test.py
ipmi_cert/: __init__.py  __main__.py  xmlparser.py
src/ipmi_cert/: __init__.py  __main__.py  _types.py  cli.py  forms.py  xmlparser.py
tests/: test_xml.py
