#:schema https://json.schemastore.org/pyproject.json

[project]
name = "ipmi-cert"
version = "0.1.1"
description = ""
authors = [{ name = "Kalle M. Aagaard", email = "git@k-moeller.dk" }]
readme = "README.md"
requires-python = ">=3.13"
license = "MIT" 
license-files = ["LICENSE"]

dependencies = [
    "lxml>=4.9.2",
    "python-dotenv>=0.21.0",
    "typer>=0.15.1",
    "httpx>=0.28.1",
    "secretstr>=0.1.0",
    "pydantic>=2.10.6",
]


[project.scripts]
ipmi-update-cert = 'ipmi_cert:cli.main'

[project.urls]
Repository = "https://github.com/KalleDK/py-ipmi-cert"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.pyright]
include = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-v --cov=ipmi_cert --cov-report=xml --cov-report=term"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
tools = [
    "pyright>=1.1.392.post0",
    "ruff>=0.9.3",
]
test = [
    "pytest>=8.3.4",
    "pytest-coverage>=0.0",
]
stubs = ["lxml-stubs>=0.4.0"]
